app/chart/templates/repo-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: repo
spec:
  host: repo
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
